--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,8 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 <ul>
-    <li><a href="users">Users</a></li>
+    <h2><li><a href="users">User list</a></li></h2>
+    <h2><li><a href="meals">Meal list</a></li></h2>
 </ul>
 </body>
 </html>
